# lame

./: .gitattributes  .gitignore  CMakeLists.txt
.github/workflows/: action.yml
cmake/: config.h.cmake  libmp3lame.exp
